# py-web-template

./: .env.tmpl  LICENSE  README.md  main.py  pyproject.toml
alembic/: env.py
app/: start.py
app/routes/: index.py
app/utils/: response.py
helpers/: lifespan.py
helpers/mysql/: __init__.py  connection.py  models.py
routes/: order.py
run/: __init__.py
scripts/: cli.py
utils/: log.py
